# saf7

./: .gitignore  CMakeLists.txt  DBusSafWorkers.cpp  DBusSafWorkers.h  README.md  SAF.cpp  SAF.h  dbus_saf_adaptor.hpp  dbus_saf_proxy.hpp  gcc_version.h  globals.h  main.cpp  saf.xml  saf7-default.conf  saf7-default.rc.template  saf7-default.service  saf7_Quit.sh  saf7_SendMsg.sh
CMake/: FindDBusCpp.cmake  FindGloox.cmake
Resources/Lokalize/: 0_getstrings.sh  2_makemo.sh  index.lokalize
Resources/Lokalize/fr/: saf7.po
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml
